# thesis-formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py  services.py
core/: __init__.py  content_analyzer.py  docx_loader.py  format_extractor.py  formatter_engine.py  ooxml_security.py  readiness.py  report_generator.py  style_mapper.py  validator.py  word_automation.py  xml_utils.py
docs/: architecture.md
examples/: README.md  rules.example.yaml
gui/: __init__.py  file_drop_widget.py  main_window.py
models/: __init__.py  io.py  schema.py
rules/: default_rules.yaml
scripts/: __init__.py  create_examples.py  smoke_test.py
tests/: conftest.py  test_gui_workflow.py  test_mvp.py  test_refactors.py  test_report_generator.py  test_security_hardening.py
