[project]
name = "thesis-formatter"
version = "0.1.0"
description = "Deterministic Word thesis formatting assistant with CLI and PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.0",
  "pydantic>=2.0",
  "python-docx>=1.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.6",
]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
