[project]
name = "thesis-formatter"
version = "0.1.0"
description = "Deterministic Word thesis formatting assistant with CLI and PySide6 GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.0",
  "pydantic>=2.0",
  "python-docx>=1.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.6",
]
dev = [
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
